change type to unitType everywhere
